2018-04-19  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py:
	change desired size in test_XtermWinops_ResizeChars_DefaultWidth and
	test_XtermWinops_ResizeChars_DefaultHeight to use average vs display size
	for consistency with other xterm-tests

2018-04-18  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/xterm_winops.py:
	factor out average_width() and average_height(), fix whitespace per pylint

	* tests/xterm_winops.py:
	use absolute difference in some assert's for consistency, per Nachman comment

	* tests/sd.py:
	cite relevant standard for module docstring, fix whitespace per pylint

	* tests/save_restore_cursor.py:
	add docstring to test_SaveRestoreCursor_AltVsMain and
	test_SaveRestoreCursor_Wrap, and fix whitespace per pylint

	* tests/ris.py:
	add docstring to test_RIS_ResetDECCOLM, fix whitespace per pylint

	* tests/rep.py, tests/decfi.py, tests/decdc.py:
	cite relevant standard for module docstring, fix whitespace per pylint

	* tests/decdc.py:
	quote the relevant standard for test_DECDC_IsNoOpWhenCursorBeginsOutsideScrollRegion

	* tests/decbi.py:
	cite relevant standard for test_DECBI_LeftOfMargin and test_DECBI_WholeScreenScrolls

2018-04-17  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/cht.py: document test_CHT_IgnoresScrollingRegion

	* tests/bs.py: explain reverse-wrap versus margins

	* tests/xterm_winops.py: fix per Nachman comment:
	- Move the call to unmaximize before the assertion to improve the odds of it happening in:
	  * test_XtermWinops_MaximizeWindow_Horizontally
	  * test_XtermWinops_MaximizeWindow_Vertically

	* escutil.py: change commented-out LogInfo to a LogDebug

	* tests/xterm_winops.py: fix per Nachman comment:
	- In test_XtermWinops_MaximizeWindow_HorizontallyAndVertically,
	move esccmd.XTERM_WINOPS(esccmd.WINOP_MAXIMIZE, esccmd.WINOP_MAXIMIZE_EXIT)
	to before the assertions. If they fail the window will be stuck maximized.
